--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,25 @@
     "name": "server",
     "private": true,
     "type": "module",
+    "scripts": {
+        "start": "nodemon server.js"
+    },
     "dependencies": {
         "@apollo/server": "^4.11.3",
+        "better-sqlite3": "^11.8.1",
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "express-jwt": "^8.5.1",
         "graphql": "^16.10.0",
+        "jsonwebtoken": "^9.0.2",
+        "knex": "^3.1.0",
+        "nanoid": "^5.1.3",
         "nexus": "^1.3.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.9"
+    },
+    "nodemonConfig": {
+        "ext": "graphql,js"
     }
 }
